# Foodify_Backend

./: .env  .env-dist  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  version.py
database/: database.py  pg_selects.sql
docker/: Dockerfile  post_deploy.sh
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
foodify/: get_application.py  main.py  pyproject.toml
foodify/application/: manager.py
foodify/application/auth/: oauth_routes.py  oauth_schemas.py  oauth_users.py
foodify/application/database/: database.py
foodify/application/models/: __init__.py  brand.py  fridge.py  product_super_relationship.py  products.py  shopping_list.py  super.py  users.py
foodify/application/routes/: api.py  fridge.py  manager.py  products.py  shoping_list.py  users.py
foodify/application/schemas/: fridge.py  products_sch.py  user.py
foodify/core/: config.py  logging.py
foodify/core/settings/: app.py  connection.py
foodify/models/: __init__.py  fridge.py  product_super_relationship.py  products.py  shopping_list.py  super.py
foodify/resources/: strings.py
foodify/resources/doc/: Foodify.ipynb
foodify/schema/: products_sch.py
foodify/setting/: setting.py
foodify/tests/: test_sql_app.py
foodify/tests/application/auth/: test_oauth_routes.py
foodify/tests/factories/: __init__.py  users_factories.py
models/: __init__.py  brand.py  fridge.py  product_super_relationship.py  products.py  shopping_list.py  sup_alca.py  sup_carr.py  sup_dia.py  super.py
schema/: products_sch.py
setting/: logging.py  setting.py-dist
src/: barcodes.py  foodify_manager.py  functions.py
src/barcode/: lectura_barcodes.py
