[tool.poetry]
name = "foodify"
version = "0.1.0"
description = ""
authors = ["Luis Galdeano <lpgaldeano@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
sqlalchemy = "^2.0.12"
psycopg2 = "^2.9.6"
requests = "^2.30.0"
pandas = "^2.0.1"
openfoodfacts = "^0.1.3"
functions = "^0.7.0"
webdriver-manager = "^3.8.6"
selenium = "^4.9.0"
bs4 = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

